<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:padding="16dp"
    tools:context=".activities.LoginActivity">

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/chomsky"
        android:text="@string/app_name"
        android:textColor="@color/colorTextTitle"
        android:textSize="55sp" />

    <TextView
        android:id="@+id/tv_login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_in_with"
        android:textColor="@color/colorTextTitle"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tv_login_with"
        android:layout_marginTop="17dp"
        android:background="@drawable/button_corner"
        android:drawableStart="@drawable/common_google_signin_btn_icon_light_normal"
        android:text="@string/sign_in_with_google"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_google"
        android:layout_marginTop="30dp"
        android:text="@string/or"
        android:textColor="@color/colorTextSubtitle"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_google"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/tv_or"
        android:text="@string/continue_without_login"
        android:textColor="@color/blue"
        android:textSize="16sp" />

</RelativeLayout>