<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="6dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ProgressBar
                android:id="@+id/pb_main"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center" />
            
            <ImageView
                android:id="@+id/iv_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_banner" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"
                android:contentDescription="@string/image_gradient" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/source"
                    android:textSize="10sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/date"
                    android:textSize="10sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
            
        </FrameLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>