<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_banner_fav"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_banner" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/bottom_shadow"
                android:layout_alignBottom="@id/iv_banner_fav"
                android:contentDescription="@string/image_gradient" />

            <ProgressBar
                android:id="@+id/pb_fav"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="70dp" />

            <TextView
                android:id="@+id/tv_title_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/title"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/iv_banner_fav"/>

            <TextView
                android:id="@+id/tv_desc_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_fav"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorTextSubtitle"
                android:text="@string/lorem_ipsum" />

            <TextView
                android:id="@+id/tv_source_fav"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/tv_desc_fav"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/source" />

            <TextView
                android:id="@+id/tv_date_fav"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/date"
                android:textColor="@color/colorTextSubtitle"
                android:layout_below="@+id/tv_desc_fav"
                android:layout_toEndOf="@id/tv_source_fav"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:ellipsize="end"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>