<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="16dp">
    
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center_horizontal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:met_floatingLabel="normal"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_name"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:met_floatingLabel="normal"
        android:inputType="textEmailAddress"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_marginTop="30dp"
        android:hint="Password"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:met_floatingLabel="normal"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/et_password"
        android:layout_marginTop="30dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/blue" />

</RelativeLayout>